deploy/clusters/workload/components/httproutes/httproutes.gen.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: argocd
    argocd.argoproj.io/instance: httproutes
    holos.run/component.name: httproutes
  name: argocd
  namespace: istio-ingress
spec:
  hostnames:
  - argocd.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: bank
    argocd.argoproj.io/instance: httproutes
    holos.run/component.name: httproutes
  name: bank
  namespace: istio-ingress
spec:
  hostnames:
  - bank.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: frontend
      namespace: bank-frontend
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: migration-podinfo
    argocd.argoproj.io/instance: httproutes
    holos.run/component.name: httproutes
  name: migration-podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - migration-podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: migration
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
